- cards : use directly white and black for headers to ensure right contrast + remove inappropriate comment - utilities/colors : remove disabled greys from Orange's colors in text and icons

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -142,8 +142,8 @@
 // scss-docs-start root-dark-rule
 // Boosted mod
 [class*="bg-black"],
-[class*="-dark"]:not(.border-dark):not(.text-dark):not(.btn-dark):not(.focus-ring-dark):not(.link-underline-dark):not(.link-dark):not(.text-bg-dark),
-[class*="bg-secondary"]:not(.text-bg-secondary) {
+[class*="-dark"]:not(.border-dark):not(.text-dark):not(.btn-dark):not(.focus-ring-dark):not(.link-underline-dark):not(.link-dark),
+[class*="bg-secondary"] {
   --#{$prefix}primary-text-rgb: #{to-rgb($brand-orange)};
   --#{$prefix}link-color: #{$link-color-inverted};
   --#{$prefix}link-hover-color: #{$link-hover-color-inverted};
